fixed layout bugs. started work on palette editing

--- a/src/containers/CodeEditor/CodeEditor.scss
+++ b/src/containers/CodeEditor/CodeEditor.scss
@@ -13,6 +13,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 
     .ace_editor {
       width: 720px;
