--- a/src/containers/PixelEditor/PixelEditor.scss
+++ b/src/containers/PixelEditor/PixelEditor.scss
@@ -4,4 +4,6 @@
   flex-grow: 1;
   background-color: #888;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
