--- a/src/containers/TileEditor/TileEditor.scss
+++ b/src/containers/TileEditor/TileEditor.scss
@@ -13,6 +13,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: row;
+    height: 10%; // fixes weird bug where the height would always be too large
   }
 
   .data-section {
